src/pages/en/v1.23.0/deployment/setup-or.mdx
---
title: "Setup OpenReplay"
metaTitle: "Setup OpenReplay"
metaDescription: "How to quickly setup OpenReplay and start recording sessions and metrics."
---
import LinkRow from '~/components/LinkRow.astro'
import YoutubeVideo from '~/components/YoutubeVideo.astro'
import IconText from '~/components/Card/IconText.astro'

<YoutubeVideo title="Watch how to Get Started with OpenReplay"
  description="If you don't like reading, you can follow this video tutorial showing you how to get started with OpenReplay in 3 minutes or less"
  videoURL="https://www.youtube.com/watch?v=EWbtMK3qK30"
  />


Getting started with OpenReplay is straightforward. 

If you'd like to watch a quick tutorial on how to get started, use [this YouTube video](https://www.youtube.com/watch?v=EWbtMK3qK30), otherwise keep reading for more details.

There are 2 ways you can get OpenReplay up and running: using the script or the npm package.

## Using Script

Copy/paste the code snippet directly into the `</head>` of your web app. The script can be found in OpenReplay dashboard under 'Preferences > Projects' and is unique to each project.

If your website supports Google Tag Manager, then you may follow the [GTM step-by-step guide](/integrations/google-tag-manager).

## Using NPM

First install the npm package.

```bash
npm i @openreplay/tracker
```

Then, initialize the package from your codebase entry point and start the tracker. You must set the `projectKey` option in the constructor. Its value can can be found in your OpenReplay dashboard under 'Preferences > Projects'.

### If your website is a Single Page Application (SPA)

You can use the tracker as a singleton instance, which is the recommended way to use it. 
This way, you can access the tracker from anywhere in your app:

```js
import { tracker } from '@openreplay/tracker'

tracker.configure({
	projectKey: PROJECT_KEY,
  ingestPoint: "https://openreplay.mydomain.com/ingest", // when dealing with the self-hosted version of OpenReplay
})

tracker.start() // returns a promise with session info (sessionID, sessionHash, userUUID)
```

Or you can use the `Tracker` class directly to handle its instance manually:

```js
import OpenReplay from '@openreplay/tracker';
//...
const tracker = new OpenReplay({
  projectKey: PROJECT_KEY,
  ingestPoint: "https://openreplay.mydomain.com/ingest" // only required if using the self-hosted version of OpenReplay
});

tracker.start();
```

### If your web app is Server-Side-Rendered (SSR)

Follow the below snippet if your web app is Server-Side-Rendered (SSR) (i.e. NextJS, NuxtJS). 
Ensure that tracker runs in browser environment and `tracker.start()` is called once the app is served to client (i.e in `useEffect` or `componentDidMount`).

```js
import OpenReplay from '@openreplay/tracker/cjs';
//...
const tracker = new OpenReplay({
      projectKey: PROJECT_KEY
});
//...
function MyApp() {
  useEffect(() => { // use componentDidMount in case of React Class Component
    tracker.start();
  }, []);
}
```

If you would like to go further in configuring the tracker, check [JavaScript SDK](/installation/javascript-sdk#options) for the list of available options.

## Integrating with other frameworks
If you're not using OpenReplay inside a bare application, you're likely to be using a Web Dev framework, like Next.js, Nuxt or something else.
Check out our personalized tutorials for each of the supported frameworks:

<div class="grid grid-cols-1 md:grid-cols-1 gap-3 md:gap-4">
  <IconText url="/sdk/using-or/next" title="React" />
  <IconText url="/sdk/using-or/nuxt" title="Vue" />
  <IconText url="/sdk/using-or/angular" title="Angular" />
  <IconText url="/sdk/using-or/next" title="NextJS" />
  <IconText url="/sdk/using-or/nuxt" title="Nuxt" />
</div>

## Next Steps

Now that you have installed the tracker and deployed your web app, session recordings should appear within few minutes. Well done!

In the meantime, you can further in the setup process to get the most out of OpenReplay. The more you capture the better for quickly reproducing and fixing issues:
<div class="or-rowlist">
  <LinkRow href="/installation/identify-user" title="Identify a User" icon="user" desc="Associate your internal user ID with the session being recorded." />
  <LinkRow href="/installation/metadata" title="Metadata" icon="metadata" desc="Also referred to as traits or user variables, metadata provides additional information about users while recording sessions." />
  <LinkRow href="/installation/custom-events" title="Custom Events" icon="api" desc="Add more intelligence by recording domain-specific events alongside session replays." />
  <LinkRow href="/installation/error-reporting" title="Error Reprting" icon="error" desc="Report errors and exceptions and see them under the ERRORS tab." />
  <LinkRow href="/installation/upload-sourcemaps" title="Upload Source-Maps" icon="highlight" desc="See the source code context obtained from stack traces in their original form." />
  <LinkRow href="/plugins" title="Plugins" icon="settings" desc="Understand what's happening under the hood by capturing your application's store and monitoring your HTTP and GraphQL queries." />
  <LinkRow href="/integrations" title="Integrations" icon="data" desc="Plug OpenReplay with your logging tools and sync backend errors with session replays." />
</div>
